content and fixes